2978 - Table multi select check box not centered fix

--- a/stencil-workspace/src/components/modus-table/modus-table.scss
+++ b/stencil-workspace/src/components/modus-table/modus-table.scss
@@ -290,6 +290,10 @@ table {
           padding-top: $rem-12px;
         }
 
+        &.row-checkbox > modus-checkbox {
+          justify-content: center;
+        }
+
         &.edit-mode {
           // border: $rem-2px $modus-table-cell-border-color solid;
           box-sizing: border-box;
